# rdk-speedtest-cli

./: CHANGELOG.md  CMakeLists.txt  Notes.txt  README.md
include/: rdk_speedtest.h
source/: rdk-speedtest-cli.c
